@@ -492,6 +492,10 @@ Trunk (unreleased changes)
     HADOOP-2614. The DFS WebUI accesses are configured to be from the user
     specified by dfs.web.ugi.  (Tsz Wo (Nicholas), SZE via dhruba)
 
+    HADOOP-2543. Implement a "no-permission-checking" mode for smooth
+    upgrade from a pre-0.16 install of HDFS.
+    (Hairong Kuang via dhruba)
+
 Release 0.15.3 - 2008-01-18
 
   BUG FIXES
